// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-bcXHqe sc-gswNZR eTvdtE gWKlTj"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bcXHqe sc-gswNZR fmEPPj gWKlTj"
>
  foo
</button>
`;
